<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.servicecorp.help">

        <Button
            android:id="@+id/TechSupport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="helpClick"
            android:text="@string/app_issues" />

        <Button
            android:id="@+id/PlacementSupport"
            android:layout_width="match_parent"
            android:onClick="helpClick"

            android:layout_height="wrap_content"
            android:text="@string/issues_with_placement" />

        <Button
            android:id="@+id/RFCunySupport"
            android:layout_width="match_parent"
            android:onClick="helpClick"
            android:layout_height="wrap_content"
            android:text="@string/issues_with_rf_system" />
    </LinearLayout>
</ScrollView>