<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.servicecorp.MainActivity">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="98dp"
                    android:src="@drawable/customlogo"
            android:id="@+id/imageView" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weekone"
            android:textAlignment="center"
            android:textSize="30sp"
            android:layout_gravity="center_vertical"
            android:id="@+id/title"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:id="@+id/day1Layout">
            <TextView
                android:layout_weight="1.25"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sun"
                android:textSize="25sp"
                android:textStyle="bold"

                />

            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:id="@+id/day1d"

                android:text="-" />

            <TextView
                android:id="@+id/day1Name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/day1Name"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:id="@+id/day1I"

                android:onClick="increment"
                android:text="+"
                 />

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/day1TextView"
                android:text="na"
                android:textSize="40sp"
                android:textAlignment="center"

                />


        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:id="@+id/day2Layout">
        <TextView
            android:layout_weight="1.25"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mon"
            android:textSize="25sp"
            android:textStyle="bold"

            />

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:onClick="decrement"
            android:id="@+id/day2d"

            android:text="-" />

        <TextView
            android:layout_weight="1"
            android:id="@+id/day2Name"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/day2Name"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:onClick="increment"
            android:id="@+id/day2I"

            android:text="+"
            />

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/day2TextView"
            android:textSize="40sp"
            android:textAlignment="center"

            />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:id="@+id/day3Layout">
        <TextView
            android:layout_weight="1.25"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tue"
            android:textSize="25sp"
            android:textStyle="bold"

            />

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:onClick="decrement"
            android:id="@+id/day3d"

            android:text="-" />

        <TextView
            android:layout_weight="1"
            android:id="@+id/day3Name"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/day3Name"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:onClick="increment"
            android:id="@+id/day3I"

            android:text="+"
           />

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text= "0"
            android:id="@+id/day3TextView"
            android:textSize="40sp"
            android:textAlignment="center"

            />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:id="@+id/day4Layout">
        <TextView
            android:layout_weight="1.25"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/wed"
            android:textSize="25sp"
            android:textStyle="bold"

            />

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:onClick="decrement"
            android:id="@+id/day4d"

            android:text="-" />

        <TextView
            android:layout_weight="1"
            android:id="@+id/day4Name"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/day4Name"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:onClick="increment"
            android:id="@+id/day4I"

            android:text="+"
        />

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text= "0"
            android:id="@+id/day4TextView"
            android:textSize="40sp"
            android:textAlignment="center"

            />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:id="@+id/day5Layout">
        <TextView
            android:layout_weight="1.25"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/thu"
            android:textSize="25sp"
            android:textStyle="bold"

            />

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:onClick="decrement"
            android:id="@+id/day5d"

            android:text="-" />

        <TextView
            android:layout_weight="1"
            android:id="@+id/day5Name"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/day5Name"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:onClick="increment"
            android:id="@+id/day5I"

            android:text="+"
             />

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/day5TextView"
            android:textSize="40sp"
            android:textAlignment="center"

            />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:id="@+id/day6Layout">
        <TextView
            android:layout_weight="1.25"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fri"
            android:textSize="25sp"
            android:textStyle="bold"

            />

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:onClick="decrement"
            android:id="@+id/day6d"

            android:text="-" />

        <TextView
            android:layout_weight="1"
            android:id="@+id/day6Name"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/day6Name"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:onClick="increment"
            android:id="@+id/day6I"

            android:text="+"
             />

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text= "0"
            android:id="@+id/day6TextView"
            android:textSize="40sp"
            android:textAlignment="center"

            />
</LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_below="@+id/day7Layout"
            >
            <TextView
                android:layout_weight="1.25"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sat"
                android:textSize="25sp"
                android:textStyle="bold"

                />

            <Button
                android:layout_weight="1"

                android:layout_width="0dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:id="@+id/day7d"

                android:text="-" />

            <TextView
                android:layout_weight="1"

                android:id="@+id/day7Name"
                android:layout_width="0dp"
                android:text="@string/day7Name"

                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textAlignment="center"
                android:textSize="16sp" />

            <Button
                android:layout_weight="1"

                android:layout_width="0dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="+"
                android:id="@+id/day7I"

                />

            <TextView
                android:layout_weight="1"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:text= "0"
                android:id="@+id/day7TextView"
                android:textAlignment="center"
                />


        </LinearLayout>
        <TextView
            android:layout_weight="1"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_hoursShown"
            android:textSize="30sp"
            android:id="@+id/totalhours"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:layout_weight="1"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="30sp"
            android:id="@+id/totalhoursshowing"
            />
    </LinearLayout>
</ScrollView>